Added support for a settings page. Made front page more readable. Corrected ordering of articles

--- a/frontend/apps/modules/main/index_backup.html
+++ b/frontend/apps/modules/main/index_backup.html
@@ -54,8 +54,10 @@
     <script src="./app.js"></script>
 
     <script src="../newstream/makeRangeFilter.js"></script>
+    <script src="../newstream/partitionFilter.js"></script>
     <script src="../newstream/frontPageCtrl.js"></script>
     <script src="../newstream/articlePreviewCtrl.js"></script>
+    <script src="../newstream/magazineSettingCtrl.js"></script>
     
     <!-- Files kept after all application related files. Do not know why?? -->
     <script src="./directive.js"></script>
