Assuming good features have been added :)

--- a/frontend/apps/modules/main/index_backup.html
+++ b/frontend/apps/modules/main/index_backup.html
@@ -23,9 +23,9 @@
     <!-- link rel="stylesheet" href="css/sandana.css"/ -->
     <!-- build:css css/devan.css -->
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../bower_components/select2/select2.css">
     <link rel="stylesheet" href="../../bower_components/angular-xeditable/dist/css/xeditable.css">
+    <link rel="stylesheet" href="../../bower_components/ng-tags-input/ng-tags-input.css">
     <link rel="stylesheet" href="../../css/custom.css">
     <!-- endbuild -->  
   </head>
@@ -34,8 +34,9 @@
 
     <div>Angular seed app: v<span app-version></span></div>
     <!-- build:js js/devan.js -->
-
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>    
+    
     <script src="../../bower_components/select2/select2.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 
@@ -50,6 +51,8 @@
     <script src="../../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="../../bower_components/moment/moment.js"></script>
     <script src="../../bower_components/angular-moment/angular-moment.js"></script>
+    <script src="../../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../../bower_components/ng-tags-input/ng-tags-input.js"></script>
 
     <script src="./app.js"></script>
 
@@ -58,10 +61,12 @@
     <script src="../newstream/frontPageCtrl.js"></script>
     <script src="../newstream/articlePreviewCtrl.js"></script>
     <script src="../newstream/magazineSettingCtrl.js"></script>
+    <script src="../newstream/homeCtrl.js"></script>
+
+    <script src="../feedback/feedbackCtrl.js"></script>
     
     <!-- Files kept after all application related files. Do not know why?? -->
     <script src="./directive.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>    
     <!-- endbuild -->
   </body>
 </html>
