--- a/frontend/apps/index.html
+++ b/frontend/apps/index.html
@@ -34,7 +34,8 @@
       js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
-    <div ng-view></div>
+    <!-- div ng-view></div -->
+    <div ui-view></div>
 
     <div>Angular seed app: v<span app-version></span></div>
     <script src="dist/js/devan.js"></script>
