--- a/frontend/apps/modules/newstream/front_page.html
+++ b/frontend/apps/modules/newstream/front_page.html
@@ -8,47 +8,56 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{magazine_title}}</a>
+      <a class="navbar-brand" href="#/{{magazineSettings._id}}">{{magazineSettings.title}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-repeat="n in [5] | makeRange"><a href="#">{{categories[n]._id}}</a></li>
-        <li class="dropdown">
+      <ul class="nav navbar-nav">
+        <li ng-repeat="n in magazineSettings.topCategories"><a href="#/{{magazineSettings._id}}?categories={{n}}">{{n}}</a></li>
+        <!--li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">more... <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li ng-repeat="n in [5,categories.length] | makeRange"><a href="#">{{categories[n]._id}}</a></li>
+            <li ng-repeat="n in [5,magazineSettings.categories.length] | makeRange"><a href="#">{{magazineSettings.categories[n]}}</a></li>
           </ul>
-        </li>
-        <li type="button" class="btn btn-primary"><a class="navbar-link" href="https://www.facebook.com/pages/Sandhana/645007232252739" target="_blank">fb</a></li>
-        <li type="button" class="btn btn-info"><a class="navbar-link" href="https://www.facebook.com/pages/Sandhana/645007232252739" target="_blank">twt</a></li>
+        </li-->
+        <li><a href="#">Pictory</a></li>
+        <li><a href="#">Video</a></li>
+        <li><a href="#"> 1 min </a></li>
+        <li><a href="#">5-10 mins</a></li>
+        <li><a href="#"> >20 mins</a></li>        
       </ul>
-
-
-
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/preview/{{magazineSettings._id}}">preview</a></li>
+        <li><a href="#/setting/{{magazineSettings._id}}">setting</a></li>
+        <li><a href="#/feedback">feedback</a></li>
+      </ul>
     </div><!-- /.navbar-collapse -->
-
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="row" ng-repeat="columnArticles in articles | orderBy:'pubDate':true | partition:3">
+<ul class="row" ng-repeat="columnArticles in articles | orderBy:'pubDate':true | partition:3">
   <div ng-repeat="article in columnArticles" class="col-md-4">
-    <div class="media">
+    <li class="media">
       <a class="pull-left" href={{article.link}} target="_blank">
-        <img class="media-object img-thumbnail" ng-src="{{article.imageUrl}}" alt="image not loaded" width=200px height=200px>
+        <!-- http://jsfiddle.net/WXZ7S/ -->
+        <img class="media-object img-rounded img_fixed_size" ng-src="{{article.imageUrl}}" alt="image not loaded">
       </a>
       <div class="media-body">
-        <a href={{article.link}} target="_blank"><h4 class="panel-title">{{article.title}}</h4></a>
+        <a style="text-decoration:none" href={{article.link}} target="_blank"><h3 class="media-heading">{{article.title}}</h3></a>
         <span class="badge">{{article.author}}</span>
         <span class="badge" am-time-ago="article.pubDate"></span>
-        <p>{{article.gist}}</p>
-        <p ng-show="article.curatorNote">Note: {{article.curatorNote}}</p>
-        <span ng-repeat="category in article.categories" class="label label-default">{{category}} </span>
-      </div>
+     </div>
+    </li>
+    <div>
+      <p>{{(article.gist+emptyString+emptyString+emptyString+emptyString).slice(0,400)}}</p>
+      <p ng-show="article.curatorNote">Note: {{article.curatorNote}}</p>
+      <!-- div class="fb-share-button" data-href={{article.link}} data-type="button_count"></div -->
+      <!-- span ng-repeat="category in article.categories" class="label label-default">{{category}} </span -->
     </div>
+    <br><br>
   </div>
-</div>
+</ul>
 
 <!-- div class="row" ng-repeat="columnArticles in articles | partition:3">
   <div ng-repeat="article in columnArticles" class="col-md-4">
