--- a/frontend/apps/modules/main/index_backup.html
+++ b/frontend/apps/modules/main/index_backup.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="../../bower_components/angular-xeditable/dist/css/xeditable.css">
     <link rel="stylesheet" href="../../bower_components/ng-tags-input/ng-tags-input.css">
     <link rel="stylesheet" href="../../css/custom.css">
-    <!-- endbuild -->  
+    <!-- endbuild -->
   </head>
   <body>
     <div ng-view></div>
@@ -35,13 +35,13 @@
     <div>Angular seed app: v<span app-version></span></div>
     <!-- build:js js/devan.js -->
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>    
-    
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <script src="../../bower_components/select2/select2.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 
     <script src="../../bower_components/angular/angular.js"></script>
-    <script src="../../bower_components/angular-route/angular-route.min.js"></script>
+    <script src="../../bower_components/angular-route/angular-route.js"></script>
     <script src="../../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -51,7 +51,7 @@
     <script src="../../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="../../bower_components/moment/moment.js"></script>
     <script src="../../bower_components/angular-moment/angular-moment.js"></script>
-    <script src="../../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="../../bower_components/ng-tags-input/ng-tags-input.js"></script>
 
     <script src="./app.js"></script>
@@ -64,7 +64,7 @@
     <script src="../newstream/homeCtrl.js"></script>
 
     <script src="../feedback/feedbackCtrl.js"></script>
-    
+
     <!-- Files kept after all application related files. Do not know why?? -->
     <script src="./directive.js"></script>
     <!-- endbuild -->
