Fixed the html not getting served because of router issue

--- a/frontend/apps/modules/main/index_backup.html
+++ b/frontend/apps/modules/main/index_backup.html
@@ -41,7 +41,7 @@
     <!-- Latest compiled and minified JavaScript -->
 
     <script src="../../bower_components/angular/angular.js"></script>
-    <script src="../../bower_components/angular-route/angular-route.min.js"></script>
+    <script src="../../bower_components/angular-route/angular-route.js"></script>
     <script src="../../bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="../../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -51,7 +51,8 @@
     <script src="../../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="../../bower_components/moment/moment.js"></script>
     <script src="../../bower_components/angular-moment/angular-moment.js"></script>
-    <script src="../../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <!-- Removed ", headers: { Accept: 'text/html; charset: utf-8' }" from line 645 in angular-ui-router.js file -->
+    <script src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="../../bower_components/ng-tags-input/ng-tags-input.js"></script>
 
     <script src="./app.js"></script>
